# pyINIDBI2

./: .envrc_  .gitignore  LICENSE  pyproject.toml
pyinidbi2/: pyinidbi2.py
tests/: test_pyinidbi2.py
