[tool.poetry]
name = "pyINIDBI2"
version = "0.1.0"
description = "Recreate of iniDBi2 with Python"
authors = ["Pixelated Grunt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-pretty-terminal = "^1.1.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
autoflake = "^2.3.1"
basedpyright = "^1.17.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "88"
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]
